--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -78,7 +78,7 @@
               <div style="text-align: left; padding: 20px;">
                
                 <div>Date: 
-                <input id="targetdate" placeholder="Type here"  type="date" (input)="generate_cal2(target)" (blur)="generate_cal2(target)"></div><br>
+                <input id="targetdate" placeholder="Type here"  type="date" (input)="generate_cal2(target)" ></div><br>
                {{getnamefordate(target)}}<br>
                {{monthnames[getmonth(target)]}}
               <div class="week"><div  class="day2">Mon</div><div  class="day2">Tue</div><div  class="day2">Wed</div><div  class="day2">Thu</div><div  class="day2">Fri</div><div  class="day2">Sat</div><div  class="day2">Sun</div></div>
