--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -80,8 +80,8 @@
                 <div>Date: 
                 <input id="targetdate" placeholder="Type here"  type="date" (input)="generate_cal2(target)" ></div><br>
                {{getnamefordate(target)}}<br>
-               {{monthnames[getmonth(target)]}}><ons-icon icon="fa-plus-circle" size="24px" (click)="adjustcal(1)" class="but"></ons-icon><ons-icon icon="fa-minus-circle" size="24px" (click)="adjustcal(-1)" class="but"></ons-icon>
-              <div class="week"><div  class="day2">Mon</div><div  class="day2">Tue</div><div  class="day2">Wed</div><div  class="day2">Thu</div><div  class="day2">Fri</div><div  class="day2">Sat</div><div  class="day2">Sun</div></div>
+               <div class="month_head"><div class="monthlab">{{monthnames[monthselect]}} {{yearselect}}</div><div class="monthbut"><ons-icon icon="fa-minus-circle" size="24px" (click)="adjustcal(-1)" class="but"></ons-icon></div><div class="monthbut"><ons-icon icon="fa-plus-circle" size="24px" (click)="adjustcal(1)" class="but"></ons-icon></div></div>
+              <div class="week2"><div  class="day2">Mon</div><div  class="day2">Tue</div><div  class="day2">Wed</div><div  class="day2">Thu</div><div  class="day2">Fri</div><div  class="day2">Sat</div><div  class="day2">Sun</div></div>
               <div class="week" *ngFor="let week of weeks; index as i ">
                 <div  (click)="set_target(day.date)" class="day" *ngFor="let day of week; index as j">{{day.date.getDate()}}</div>
                </div>  
