--- a/src/app/termpicker/termpicker.component.html
+++ b/src/app/termpicker/termpicker.component.html
@@ -20,7 +20,7 @@
 
 
       <ons-list>
-        <ons-list-item (click)="push($event, sections, i)" *ngFor="let sections of section[2][globals.mysection];index as i">
+        <ons-list-item (click)="push($event, sections, i)" *ngFor="let sections of termscopy;index as i">
        <span class="left" >
         <ons-icon *ngIf="localterm==i" icon="fa-check-circle" size="50px" style="color: #00a794;" class="list-item__icon">
         </ons-icon>
@@ -30,7 +30,7 @@
         </span>
        
         <span class="list-item__title">{{sections.name}}</span>
-        <span class="list-item__subtitle">{{sections.startdate}} to {{sections.enddate}}</span>
+        <span class="list-item__subtitle">{{termdates(sections.startdate,sections.enddate)}}</span>
         </ons-list-item>
        
       </ons-list>
