--- a/src/app/eventcard/attendancetab/attendancetab.component.html
+++ b/src/app/eventcard/attendancetab/attendancetab.component.html
@@ -15,27 +15,25 @@
     </span>
     Currently {{get_count(false)}} member<span *ngIf="get_count(false) > 1 || get_count(false) == 0">s</span> and  {{get_count(true)}} leader<span *ngIf="get_count(true) > 1 || get_count(true) == 0">s</span> are attending.
     <br><br>
-    <p *ngIf="get_undecided(false) > 0">{{get_undecided(false)}} members have not yet decided</p>  
+    <p *ngIf="get_undecided(false) > 0">{{get_undecided(false)}} members and {{get_undecided(true)}} Leaders have not yet decided.</p> 
+    <p *ngIf="get_no(false) > 0">{{get_no(false)}} members and {{get_no(true)}} Leaders are not attending.</p>
+    <p><ons-segment #segment id="segment_attend" style="margin-top: 8px; width: 100%">
+            <button (click)="update_att(0)">
+             Attending</button><button (click)="update_att(1)">
+             Not Attending</button><button (click)="update_att(2)">
+             Undecided</button>
+     </ons-segment> </p>       
     <ons-list>
     <ons-list-header>Members&nbsp;({{get_count(false)}})</ons-list-header>
     <div *ngFor="let att of event.items ; index as z">
-      <ons-list-item expandable *ngIf="att.attending === 'Yes' && att.patrolid > -1" >
+      <ons-list-item (click)="goto_scoutcard($event,att)" modifier="chevron" *ngIf="(att_list==1 && att.attending === 'No')||(att_list==2 && (att.attending === 'Invited'||att.attending==='Show in Parent Portal')) && att.patrolid > -1">
+        <div class="center"><span class="list-item__title">{{att.firstname}} {{att.lastname}}</span></div>
+      </ons-list-item> 
+      <ons-list-item expandable *ngIf="(att_list==0 && att.attending === 'Yes') && att.patrolid > -1" >
       
       <div class="center"><span class="list-item__title">{{att.firstname}} {{att.lastname}}</span><span class="list-item__subtitle">{{getDetailAge(att)}}</span></div>
-      <div class="expandable-content">
-       <!-- <ons-list modifier="inset">
-        <ons-list-header>Extra Info</ons-list-header>
-        <ons-list-item modifier="chevron longdivider" (click)="goto_scoutcard($event,att);" > <ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>  
-          <span *ngFor="let value of eventA.structure[1].rows ; index as z">
-              <ons-list-item modifier="longdivider" *ngIf="value.field != 'info'">
-                <span class="list-item__subtitle">{{value.name}}</span><span class="list-item__title"><ons-icon style="color: green;" icon="fa-coins"  *ngIf="value.field.substring(0, 1) == 'p'"></ons-icon><ons-icon icon="fa-info-circle"  style="color: blue;" *ngIf="value.field.substring(0, 1) != 'p'"></ons-icon>&nbsp;{{att[value.field]}}</span></ons-list-item>
-         </span> 
-         
-        </ons-list>-->
-        
-
-
-        <div  class="table" style="padding-top: 10px; height: 40px;" (click)="goto_scoutcard($event,att);">
+      <div  class="expandable-content">
+              <div  class="table" style="padding-top: 10px; height: 40px;" (click)="goto_scoutcard($event,att);">
                 <div class="table_row4"><ons-icon icon="fa-user"></ons-icon></div>
                 <div class="table_row3">Goto Contact Details for {{att.firstname}}</div>
         </div>  
@@ -45,28 +43,21 @@
         <div class="table_row3">{{att[value.field]}}</div>
          <div class="table_row4">&nbsp;</div>
         <div class="table_row2">{{value.name}}</div>
-    </div>
+       </div>
         </span>
       </div>  
       </ons-list-item>
       </div>
        <ons-list-header>Leaders&nbsp;({{get_count(true)}})</ons-list-header>
         <div *ngFor="let att of event.items ; index as z">
-      <ons-list-item expandable *ngIf="att.attending === 'Yes' && att.patrolid < 0" >
+          <ons-list-item (click)="goto_scoutcard($event,att)" modifier="chevron" *ngIf="((att_list==1 && att.attending === 'No')||(att_list==2 && (att.attending === 'Invited'||att.attending==='Show in Parent Portal'))) && att.patrolid < 0">
+        <div class="center"><span class="list-item__title">{{att.firstname}} {{att.lastname}}</span></div>
+      </ons-list-item>
+      <ons-list-item expandable *ngIf="(att_list==0 && att.attending === 'Yes') && att.patrolid < 0" >
       
       <div class="center">{{att.firstname}} {{att.lastname}}</div>
       <div class="expandable-content">
-       <!-- <ons-list modifier="inset">
-        <ons-list-header>Extra Info</ons-list-header>
-        <ons-list-item modifier="chevron longdivider" (click)="goto_scoutcard($event,att);" > <ons-icon icon="fa-user"></ons-icon>&nbsp;Contact Details</ons-list-item>  
-          <span *ngFor="let value of eventA.structure[1].rows ; index as z">
-              <ons-list-item modifier="longdivider" *ngIf="value.field != 'info'">
-                <span class="list-item__subtitle">{{value.name}}</span><span class="list-item__title"><ons-icon style="color: green;" icon="fa-coins"  *ngIf="value.field.substring(0, 1) == 'p'"></ons-icon><ons-icon icon="fa-info-circle"  style="color: blue;" *ngIf="value.field.substring(0, 1) != 'p'"></ons-icon>&nbsp;{{att[value.field]}}</span></ons-list-item>
-         </span> 
-         
-
-        </ons-list>-->
-
+       
         <div  class="table" style="padding-top: 10px; height: 40px;" (click)="goto_scoutcard($event,att);">
                 <div class="table_row4"><ons-icon icon="fa-user"></ons-icon></div>
                 <div class="table_row3">Goto Contact Details for {{att.firstname}}</div>
@@ -84,7 +75,7 @@
       </div>
     </ons-list>
   </ons-card>
-  <ons-card>  
+  <ons-card *ngIf="att_list==0">  
   <ons-icon icon="fa-layer-group"></ons-icon>&nbsp;Attendees grouped by {{group_label[group_seg]}} <span *ngIf="notamember > 0">({{notamember}} former members are excluded from these totals)</span>
     <ons-segment #segment id="segment_summary" style="margin-top: 8px; width: 100%">
             <button (click)="update_summary()">
