--- a/src/app/progcard/summarytab/summarytab.component.css
+++ b/src/app/progcard/summarytab/summarytab.component.css
@@ -1,5 +1,5 @@
 .head { color: #7413dc; font-size: 16pt; font-weight: 600;}
-.subhead { font-size: 14pt;color: #7413dc;}
+.subhead { font-size: 14pt;color: #7413dc; margin-bottom: 0px;}
 .thead  { font-size: 14pt;background: #00a794  ;color: white;padding: 4px;}
 .theadl  { width: 90%;font-size: 14pt;background:#00a794;color: white;padding: 4px;font-weight: 600}
 .theadr  { width: 10%; text-align: right; font-size: 10pt;background:#00a794;color: white;padding: 2px;padding-right: 8px}
