--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -24,16 +24,12 @@
 </ons-bottom-toolbar>
 -->
         <div class="content">
-           <ons-search-input id="text" placeholder="Global Search " [(value)]="namefilter" (keyup)="update_search($event)" style="width:100%" ></ons-search-input>
+          
       <div *ngIf="globals.secret!=''">    
       <h2>Global Search</h2>
-      <!--<p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-        {{globals.mysection}}
-        {{globals.current_term}}
-        {{globals.config[2][globals.mysection][globals.current_term].name}}
-        
-      </p>
-    -->
+    <div class="sticky">  
+   <ons-search-input id="text" placeholder="Global Search " [(value)]="namefilter" (keyup)="update_search($event)" style="width:100%" ></ons-search-input>
+    </div>
     <div *ngIf="grid_list==0"><!--Grid-->
     <div  id="gridcontainer" *ngFor="let member of members; index as i"> 
     <!--<div *ngIf="((i==0)||(member.patrol!=members[i-1].patrol))" class="patrolheader">
