--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -31,7 +31,8 @@
 	</ons-speed-dial>
 
 	<div class="content">
-     <h2>Birthdays</h2>
+     <h2>Health</h2>
+     <div class="sticky">
      <ons-search-input id="text" placeholder="Filter by Name" [(value)]="namefilter" (keyup)="update_search($event,-1)" style="width:100%" ></ons-search-input>
 		<ons-segment #segment id="segment" style="width: 100%; margin-top: 8px;">
 			<button (click)="update_search($event,1)">All</button>
@@ -40,7 +41,7 @@
             <button (click)="update_search($event,4)"><ons-icon  icon="fa-utensils" ></ons-icon><span class="segmed">Diet</span></button>
             <button (click)="update_search($event,5)"><ons-icon  icon="fa-info-circle" ></ons-icon><span class="segmed">Other</span></button>
           </ons-segment>
-         
+      </div>   
 
       <ons-list-title  *ngIf="filtername != ''"><ons-icon icon="fa-filter"></ons-icon>&nbsp;{{filtername}}&nbsp;({{filterlist.length}})</ons-list-title>
       <ons-list><span  *ngFor="let member of members; index as i" >
