--- a/src/app/progcard/summarytab/summarytab.component.html
+++ b/src/app/progcard/summarytab/summarytab.component.html
@@ -12,13 +12,13 @@
 <div *ngIf="prog.items[0].unavailableleaders.length==0">All leaders present</div><br>
 <div *ngIf="prog.items[0].leaders != ''" class="theadp" (click)="toggle('ln')"><div  class="theadl">Leader Notes</div><div class="theadr"><div id="ln_plus"><ons-icon icon="fa-plus-square" size="24px" class="helper"></ons-icon></div><div style="display: none" id="ln_minus"><ons-icon icon="fa-minus-square" size="24px" class="helper"></ons-icon></div></div></div> 
 <div style="display: none" *ngIf="prog.items[0].leaders != ''" class="theadb" id="ln">{{prog.items[0].leaders}}</div> 
-<p class="subhead">Parent Helpers ({{prog.items[0].parentsrequired}} needed)</p>
+<p class="subhead">Parent Helpers <span *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length)>0">({{prog.items[0].parentsrequired - prog.items[0].help.length}} more needed)</span></p>
 <div *ngIf="prog.items[0].help.length==0">No parents helping</div> 
 <div *ngFor="let ldr of prog.items[0].help; index as i">
   <div (click)="go($event,ldr.scoutid);" class="parent_line"><div><ons-icon icon="fa-user"></ons-icon>&nbsp;Parents of <b>{{ldr.scout}}</b>&nbsp;<ons-icon icon="fa-chevron-right"></ons-icon></div></div>
 </div>
-<div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) == 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more is needed</div>
-<div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) > 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more are needed</div>
+<!--<div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) == 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more is needed</div>
+<div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) > 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more are needed</div>-->
 <br>
 <div *ngIf="prog.items[0].notesforhelpingparents != null && prog.items[0].notesforhelpingparents !=''" class="theadp" (click)="toggle('pn')"><div  class="theadl">Parent Notes</div><div class="theadr"><div id="pn_plus"><ons-icon icon="fa-plus-square" size="24px" class="helper"></ons-icon></div><div style="display: none" id="pn_minus"><ons-icon icon="fa-minus-square" size="24px" class="helper"></ons-icon></div></div></div> 
 <div style="display: none" *ngIf="prog.items[0].notesforhelpingparents != null && prog.items[0].notesforhelpingparents !=''" class="theadb" id="pn">{{prog.items[0].notesforhelpingparents}}</div>
