--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,7 +4,7 @@
         {{globals.application}}
       </div>
       <div class="right">
-        <ons-toolbar-button (click)="openMenu()">
+        <ons-toolbar-button (click)="openMenu()" class="menu>
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
       </div>
