--- a/src/app/globalsearch/globalsearch.component.html
+++ b/src/app/globalsearch/globalsearch.component.html
@@ -11,7 +11,7 @@
           <ons-icon style="color: 7413dc;" icon="fa-th" *ngIf="grid_list==1"></ons-icon>
           <ons-icon style="color: 7413dc;" icon="fa-th-list" *ngIf="grid_list==0"></ons-icon>
         </ons-toolbar-button>
-        <ons-toolbar-button (click)="openMenu()">
+        <ons-toolbar-button (click)="openMenu()"  class="menu_sel">
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
       </div>
