--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -13,7 +13,7 @@
 				<ons-icon icon="fa-sort"></ons-icon>
 			</ons-toolbar-button>
 
-			<ons-toolbar-button (click)="openMenu()">
+			<ons-toolbar-button  class="menu_sel" (click)="openMenu()">
 				<ons-icon icon="fa-bars"></ons-icon>
 			</ons-toolbar-button>
 		</div>
