--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,7 +6,7 @@
 		<div class="left">
 			<ons-back-button>Back</ons-back-button>
 		</div>
-		<div class="right">
+		<div class="right" class="menu_sel">
 			<ons-toolbar-button (click)="openMenu()">
 				<ons-icon icon="fa-bars"></ons-icon>
 			</ons-toolbar-button>
