--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 	<div class="center">
 		{{globals.application}}
 	</div>
-	<div class="right">
+	<div class="right" class="menu_sel">
 		<ons-toolbar-button (click)="openMenu()">
 			<ons-icon icon="fa-bars"></ons-icon>
 		</ons-toolbar-button>
