--- a/src/app/lastchecked/lastchecked.component.html
+++ b/src/app/lastchecked/lastchecked.component.html
@@ -6,7 +6,7 @@
     <div class="left">
 		<ons-back-button>Back</ons-back-button>
 	</div>
-		<div class="right">
+		<div class="right" class="menu_sel">
 
 			<!--<ons-toolbar-button (click)="filterDialog.show()">
 				<ons-icon icon="fa-filter"></ons-icon>
