--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,8 +3,8 @@
       <div class="center">
         {{globals.application}}
       </div>
-      <div class="right">
-        <ons-toolbar-button (click)="openMenu()" class="menu>
+      <div class="right" class="menu_sel">
+        <ons-toolbar-button (click)="openMenu()" class="menu_sel">
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
       </div>
