--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
       <div class="center">
         {{globals.application}}
       </div>
-      <div class="right" class="menu_sel">
+      <div class="right menu_sel">
         <ons-toolbar-button (click)="openMenu()" class="menu_sel">
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
