--- a/src/app/rosta/rosta.component.html
+++ b/src/app/rosta/rosta.component.html
@@ -7,7 +7,7 @@
       <div class="left">
 		<ons-back-button>Back</ons-back-button>
 	</div>
-      <div class="right" class="menu_sel">
+      <div class="right menu_sel">
         
         <ons-toolbar-button (click)="openMenu()">
           <ons-icon icon="fa-bars"></ons-icon>
