--- a/src/app/progcard/progcard.component.html
+++ b/src/app/progcard/progcard.component.html
@@ -5,7 +5,7 @@
   <div class="center">
         {{globals.application}}
       </div>
-	<div class="right" class="menu_sel">
+	<div class="right menu_sel">
      
 		<ons-toolbar-button (click)="openMenu()">
 			<ons-icon icon="fa-bars"></ons-icon>
