--- a/src/app/programme/programme.component.css
+++ b/src/app/programme/programme.component.css
@@ -1,1 +1,4 @@
 .no_opt {text-align: center;  background: lighrgrey; font-weight: 600;}
+.not_style {background: #00a794; margin-top: 25px; margin-left: -5px; font-size: small;}
+.helper {margin-top: -20px;
+    margin-right: -20px;}
