--- a/src/app/progcard/summarytab/summarytab.component.html
+++ b/src/app/progcard/summarytab/summarytab.component.html
@@ -12,11 +12,19 @@
 <div *ngIf="prog.items[0].unavailableleaders.length==0">All leaders present</div><br>
 <div *ngIf="prog.items[0].leaders != ''" class="theadp" (click)="toggle('ln')"><div  class="theadl">Leader Notes</div><div class="theadr"><div id="ln_plus"><ons-icon icon="fa-plus-square" size="24px" class="helper"></ons-icon></div><div style="display: none" id="ln_minus"><ons-icon icon="fa-minus-square" size="24px" class="helper"></ons-icon></div></div></div> 
 <div style="display: none" *ngIf="prog.items[0].leaders != ''" class="theadb" id="ln">{{prog.items[0].leaders}}</div> 
-<p (click)="go_rosta($event,prog);" class="subhead"><span><ons-icon icon="fa-user-edit" size="24px" class="helper"></ons-icon></span>&nbsp;Parent Helpers <span *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length)>0">({{prog.items[0].parentsrequired - prog.items[0].help.length}} more needed)</span></p>
+<p  class="subhead">Parent Helpers </p>
 <div *ngIf="prog.items[0].help.length==0">No parents helping</div> 
+<br *ngIf="prog.items[0].help.length>0">
 <div *ngFor="let ldr of prog.items[0].help; index as i">
-  <div (click)="go($event,ldr.scoutid);" class="parent_line"><div><ons-icon icon="fa-user"></ons-icon>&nbsp;Parents of <b>{{ldr.scout}}</b>&nbsp;<ons-icon icon="fa-chevron-right"></ons-icon></div></div>
+  <ons-list-header *ngIf="i==0">Parents {{prog.items[0].help.length}} of {{prog.items[0].parentsrequired}} needed</ons-list-header>
+  <ons-list-item (click)="go($event,ldr.scoutid);" modifier="chevron">
+    <span class="list-item__title">  
+          {{ldr.scout}}
+    </span>
+        <span class="list-item__subtitle">{{parentname(ldr.scoutid)}}</span>
+  </ons-list-item>  
 </div>
+<p (click)="go_rosta($event,prog);"><ons-icon icon="fa-user-edit"  class="helper"></ons-icon>&nbsp;Update Helpers <span *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length)>0">({{prog.items[0].parentsrequired - prog.items[0].help.length}} more needed)</span></p>
 <!--<div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) == 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more is needed</div>
 <div *ngIf="(prog.items[0].parentsrequired - prog.items[0].help.length) > 1">{{prog.items[0].parentsrequired - prog.items[0].help.length}} more are needed</div>-->
 <br>
