--- a/src/app/leaderrosta/leaderrosta.component.html
+++ b/src/app/leaderrosta/leaderrosta.component.html
@@ -16,7 +16,7 @@
     </ons-toolbar>
 
         <div class="content">    
-   <div class="wrapper"><h2>Rosta</h2>     
+   <div class="wrapper"><h2>Leaders Attending</h2>     
    <div id="infoi"> <ons-icon icon="fa-ellipsis-v"></ons-icon></div></div>
      
   <span  id="gridcontainer" *ngFor="let prog of globals.progs; index as i">
