--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 	</div>
 </ons-toolbar>
 <div class="content">
-	<h2>Logon</h2>
+	<h2>Welcome</h2>
 	<div style="text-align: center">
 		<br>
        <!-- <ons-button (click)="push()">
@@ -17,7 +17,7 @@
         </ons-button> -->
   </div>
   <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-        Swipe left to open the menu!
+        Logon using your OSM logon details
   </p>
       
   <div style="text-align: center"> 
