--- a/src/app/leaderrosta/leaderrosta.component.css
+++ b/src/app/leaderrosta/leaderrosta.component.css
@@ -60,3 +60,4 @@
     @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+.leaderline {height: 50px;}
