--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
         </ons-button> -->
   </div>
   <p style="text-align: center; opacity: 0.6; padding-top: 20px;">
-        Logon using your OSM logon details
+        Logon using your OSM account
   </p>
       
   <div style="text-align: center"> 
