--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -22,6 +22,9 @@
       <p class="switchsec">
       <b>Section:</b>  {{globals.sectionname}}&nbsp;<ons-icon icon="fa-exchange-alt" (click)="loadPage(sectionselect)"></ons-icon>    
       </p>
+      <ons-card>
+        Some Items are disabled. Find out more.
+      </ons-card>  
         <div class="member_outer" (click)="loadPage(medical)">
            <div class="member_inner">
           <div class="member_box"><div class="member_initial" ><ons-icon icon="fa-ambulance"></ons-icon></div></div>
