--- a/src/app/programme/programme.component.html
+++ b/src/app/programme/programme.component.html
@@ -19,9 +19,9 @@
       <h2>Programme</h2>
      
     
-
+<ons-card *ngIf="globals.sectiondata[4].items.length==0">No programme for the selected term</ons-card> 
   <ons-list>
-  <div class="no_opt" *ngIf="globals.sectiondata[4].items.length==0">No programme for the selected term</div>  
+   
   <span  id="gridcontainer" *ngFor="let prog of globals.sectiondata[4].items; index as i">
 <ons-list-item (click)="go($event,prog);" modifier="chevron">
       
