--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,7 @@
       </div>
     </ons-toolbar>
     <ons-bottom-toolbar>
-      Version&nbsp;{{globals.version}}&nbsp;<span *ngIf="!globals.loaded.events&&globals.access.events>0"><ons-icon icon="fa-spinner" spin="true" ></ons-icon> Loading Events...</span>
+      <div style="display:flex"><div style="width:40%">Version&nbsp;{{globals.version}}</div><div style="width:60%"><span *ngIf="!globals.loaded.events&&globals.access.events>0"><ons-icon icon="fa-spinner" spin="true" ></ons-icon> Loading Events...</span></div></div>
 </ons-bottom-toolbar>
 
         <div class="content">
@@ -82,12 +82,11 @@
           <ons-icon spin="true" icon="fa-spinner" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon>
           </div></div>
           <div class="member_name">Parent Rosta</div>
-          
          </div> 
       </div>
-      <div class="member_outer" (click)="loadPage(leaderrosta)">
+      <div class="member_outer" (click)="(globals.loaded.progs&&globals.access.progs>0)&&loadPage(leaderrosta)">
            <div class="member_inner">
-          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-users"></ons-icon></div></div>
+          <div class="member_box"><div class="member_initial"><ons-icon icon="fa-users" *ngIf="globals.loaded.progs||globals.access.progs==0"></ons-icon><ons-icon spin="true" icon="fa-spinner" *ngIf="!globals.loaded.progs&&globals.access.progs>0"></ons-icon></div></div>
           <div class="member_name">Meeting<br>Leadership</div>
          </div> 
       </div>
