--- a/src/app/leaderrosta/leaderrosta.component.html
+++ b/src/app/leaderrosta/leaderrosta.component.html
@@ -8,7 +8,10 @@
 		<ons-back-button>Back</ons-back-button>
 	</div>
       <div class="right menu_sel">
-        
+        <ons-toolbar-button (click)="switchdisplay()">
+          <ons-icon style="color: 7413dc;" icon="fa-calendar-day" *ngIf="date_list"></ons-icon>
+          <ons-icon style="color: 7413dc;" icon="fa-user-ninja" *ngIf="!date_list"></ons-icon>
+        </ons-toolbar-button>  
         <ons-toolbar-button (click)="openMenu()">
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
